@@ -328,6 +328,9 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
     - x2goserver/bin/x2goupdateoptionsstring: generalize code looping through
       program arguments and split out transformation operation into own
       subroutine.
+    - {X2Go/Server/Agent/NX/Options.pm,
+       x2goserver/bin/x2goupdateoptionsstring}: enable Unicode handling, as
+      far as possible.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
